objects/ssot__CompliancePlcyCmplClVer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CompliancePolicyClauseVersionId__c</fullName>
        <label>Compliance Policy Clause Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompliancePolicyVersionId__c</fullName>
        <label>Compliance Policy Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Compliance Policy Cmpl Clause Ver Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762673905_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePlcyCmplClVer_CompliancePo_rel</label>
        <referenceTo>ssot__CompliancePolicyVersion__dlm</referenceTo>
        <relationshipLabel>CompliancePlcyCmplClVer_CompliancePo_rel</relationshipLabel>
        <relationshipName>rel_1752762673905_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762732808_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePlcyCmplClVer_CompliancePo_rel</label>
        <referenceTo>ssot__CompliancePolicyClauseVersion__dlm</referenceTo>
        <relationshipLabel>CompliancePlcyCmplClVer_CompliancePo_rel</relationshipLabel>
        <relationshipName>rel_1752762732808_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>